addressing issue with fuseki frontend url
